2005-02-27  Ryan Lortie  <desrt@desrt.ca>

	* src/cpufreq-applet.c: Don't leak style while handling the
	change_background signal.  Fix adapted from Vincent Untz's fixes
	to various panelapplets.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* src/cpufreq-applet.c: (cpufreq_applet_get_max_cpu): ANSIfication
	* src/cpufreq-monitor-procfs.c: (cpufreq_monitor_procfs_get_type):
	ANSIfication, return NULL, not FALSE from some functions.
	* src/cpufreq-monitor-sysfs.c: (cpufreq_monitor_sysfs_get_type),
	(cpufreq_monitor_sysfs_get_available_frequencies): Same as above
	and add some missing headers.
	* src/cpufreq-monitor.c: (cpufreq_monitor_get_type): Same
	* src/cpufreq-popup.c: (cpufreq_popup_selector_is_available): Same
	* src/cpufreq-selector/cpufreq-procfs.c: (cpufreq_procfs_get_type),
	(cpufreq_procfs_new): Same
	* src/cpufreq-selector/cpufreq-sysfs.c: (cpufreq_sysfs_get_type),
	(cpufreq_sysfs_new): Same
	* src/cpufreq-selector/cpufreq.c: (cpufreq_get_type): Same

2005-02-11  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/*.[ch]:
	* src/cpufreq-selector/*.[ch]: fixed copyright information. Fixes
	#166741

2005-01-20  Carlos Garcia Campos <carlosgc@gnome.org>

	* pixmaps/cpufreq-25.png:
	* pixmaps/cpufreq-50.png:
	* pixmaps/cpufreq-75.png:
	* pixmaps/cpufreq-100.png:
	* pixmaps/cpufreq-na.png: Use the new icons instead

2005-01-11  Davyd Madeley  <davyd@madeley.id.au>

	* src/cpufreq-applet.c: Make GtkAboutDialog appear in the centre of
	the screen.

2005-01-01  Davyd Madeley  <davyd@madeley.id.au>

	* src/cpufreq-monitor-cpuinfo.c:
	* src/cpufreq-monitor-procfs.c:
	* src/cpufreq-monitor-sysfs.c: Reorder headers to allow things to
	  compile.

2004-12-27  Carlos Garcia Campos <carlosgc@gnome.org>

	* cpufreq-monitor.c: emit the changed signal when the cpu attribute
	changes
	
2004-12-27  Carlos Garcia Campos <carlosgc@gnome.org>

	* src/Makefile.am, src/cpufreq-selector/Makefile.am: compile with all
	warnings
