@@ -2,9 +2,9 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appletversion "0.3">
-  <!ENTITY manrevision "0.3">
-  <!ENTITY date "October 2004">
+  <!ENTITY appletversion "2.9.7">
+  <!ENTITY manrevision "2.10">
+  <!ENTITY date "March 2005">
   <!ENTITY applet "CPU Frequency Scaling Monitor">
 ]>
 <!-- 
@@ -19,7 +19,11 @@
 <!-- please do not change the id; for translations, change lang to -->
 <!-- appropriate code -->
   <articleinfo> 
-	 <title>&applet; Applet Manual V&manrevision;</title> 
+	 <title>&applet; Manual version &manrevision;</title> 
+	<copyright>
+	  <year>2005</year>
+	  <holder>Davyd Madeley</holder>
+	</copyright>
         <copyright>
 	   <year>2004</year>
             <holder>GNOME Foundation</holder>
@@ -50,6 +54,14 @@
                   <orgname></orgname>
 	       </affiliation>-->
             </author>
+	    <author>
+	      <firstname>Davyd</firstname>
+	      <surname>Madeley</surname>
+	      <email>davyd@madeley.id.au</email>
+	      <affiliation>
+	        <orgname>GNOME Project</orgname>
+	      </affiliation>
+	    </author>
       <!-- This is appropriate place for other contributors: translators,
            maintainers,  etc. Commented out by default.
         <othercredit role="translator">
@@ -65,9 +77,16 @@
 	 </authorgroup>
 
 	 <revhistory>
+	   <revision>
+	     <revnumber>GNOME 2.10</revnumber>
+	     <date>March 2005</date>
+	     <revdescription>
+	      <para role="author">Davyd Madeley</para>
+	     </revdescription>
+	   </revision>
 		<revision> 
-		  <revnumber>&applet; Applet Manual V&manrevision;</revnumber> 
-		  <date>&date;</date> 
+		  <revnumber>&applet; Applet Manual V0.3</revnumber> 
+		  <date>October 2004</date> 
 		  <revdescription> 
                     <para role="author">Carlos Garcia Campos</para>
                     <para role="publisher">GNOME Documentation Project</para>
@@ -95,67 +114,119 @@
 <!-- ============= Introduction ============================== -->
 <sect1 id="cpufreq-applet-introduction"> 
 	 <title>Introduction</title> 
-	 <figure id="cpufreq-applet-powersave"> 
-		<title>&applet; Applet In Powersave Mode</title> 
+	 <figure id="cpufreq-applet-figure"> 
+	    <title>&applet;</title> 
 		<screenshot> 
 		  <mediaobject> 
 		     <imageobject>
-			<imagedata fileref="figures/cpufreq-applet-powersave1.png" format="PNG"/>
+			<imagedata fileref="figures/cpufreq-applet.png"
+				   format="PNG"/> 
 		     </imageobject>
 		  </mediaobject>
-	       </screenshot>
-	       <screenshot>
-		  <mediaobject>
-		     <imageobject>
-			<imagedata fileref="figures/cpufreq-applet-powersave2.png" format="PNG"/>
-		     </imageobject>
-		     <textobject> 
-			<phrase>Shows &applet; applet in powersave mode.</phrase> 
-		     </textobject> 
-		  </mediaobject> 
-		</screenshot> 
-	 </figure> 
-	 <figure id="cpufreq-applet-performance"> 
-	    <title>&applet; Applet In Performance Mode</title> 
-		<screenshot> 
-		  <mediaobject> 
-		     <imageobject>
-			<imagedata fileref="figures/cpufreq-applet-performance1.png" format="PNG"/> 
-		     </imageobject>
-		  </mediaobject>
-	       </screenshot>
-	       <screenshot>
-		  <mediaobject>
-		     <imageobject>
-			<imagedata fileref="figures/cpufreq-applet-performance2.png" format="PNG"/>
-		     </imageobject>
-		     <textobject> 
-			<phrase>Shows &applet; applet in performance mode.</phrase> 
-		     </textobject> 
-		  </mediaobject> 
 	       </screenshot>
 	 </figure> 
     <!-- ==== End of Figure ======================================= -->
-    <para>The <application>&applet;</application> applet provides a convenient way to monitor the CPU Frequency Scaling for each CPU.
+    <para>The <application>&applet;</application> provides a convenient way to monitor the CPU Frequency Scaling for each CPU.
 		</para> 
 	 <para>To add <application>&applet;</application> to a panel, right-click on the panel to open the panel popup menu, then choose 
 		<menuchoice> 
 		  <guimenu>Add to Panel</guimenu> 
-		  <guisubmenu>Utility</guisubmenu> 
 		  <guimenuitem>CPU Frequency Scaling Monitor</guimenuitem> 
 		</menuchoice>.</para> 
+	
+    <note><para>
+     Unfortunately, CPU frequency scaling can currently only be monitored on
+     Linux machines that have support in the kernel. It can however, support the
+     several generations of frequency scaling interfaces in the kernel.
+    </para></note>
   </sect1>
 
 <!-- ================ Usage ================================ -->
 <sect1 id="cpufreq-applet-usage"> 
    <title>Usage</title>
-   <para>When there is no cpufreq support in the system, the &applet; only displays the current CPU frequency.</para>
-   <para>When cpufreq is supported in the system, the &applet; displays the CPU icon with a progress bar. The state of the progress bar represents the current CPU frequency with respect to the maximum frequency.</para>
-   <para>By default the &applet; display the current CPU frequency, but you can configure it to display it as percentage instead, or even to display only the icon. For more information on how to configure &applet; see <xref linkend="cpufreq-applet-prefs"/>.</para>
-   <para>Each instance of &applet; can monitor only one CPU. You must start an instance of &applet; for each CPU that you want to monitor if you are in a multiprocessor system (SMP).</para>
+   <para>When there is no CPU frequency scaling support in the system, the &applet; only displays the current CPU frequency.</para>
+   <para>When CPU frequency scaling is supported in the system, the &applet; displays the CPU icon with a progress bar. The state of the progress bar represents the current CPU frequency with respect to the maximum frequency.</para>
+   <para>By default the &applet; displays the current CPU frequency as a value
+   in Hertz (the standard measure of frequency), but can be configured to
+   display a percentage instead. For more information on how to configure &applet; see <xref linkend="cpufreq-applet-prefs"/>.</para>
+   <para>Each instance of &applet; can monitor only one CPU. You must start an
+   instance of &applet; for each CPU that you want to monitor if you are in a
+   multiprocessor (SMP) system.</para>
+
+   <sect2 id="gnome-cpufreq-icons">
+     <title>Understanding the Icons</title>
+     <para>
+       The &applet; has a series of icons that graphically represent the current
+       scaling level of the processor you are monitoring. They are:
+     </para>
+      <informaltable frame="all">
+        <tgroup cols="2" colsep="1" rowsep="1">
+          <colspec colname="COLSPEC0" colwidth="50*"/>
+          <colspec colname="COLSPEC1" colwidth="50*"/>
+          <thead>
+            <row valign="top">
+              <entry colname="COLSPEC0">
+                <para>Icon</para></entry>
+              <entry colname="COLSPEC1">
+                <para>Description</para></entry>
+            </row>
+          </thead>
+          <tbody>
+            <row valign="top">
+              <entry><para><inlinemediaobject><imageobject>
+               <imagedata fileref="figures/cpufreq-100.png"
+	     		  format="PNG"/>
+               </imageobject><textobject>
+                <phrase>100% Power</phrase>
+              </textobject></inlinemediaobject></para></entry>
+	      <entry><para>
+	       The CPU is running at, or close to, 100% throughput
+	      </para></entry>
+	    </row>
+            <row valign="top">
+              <entry><para><inlinemediaobject><imageobject>
+               <imagedata fileref="figures/cpufreq-75.png"
+	     		  format="PNG"/>
+               </imageobject><textobject>
+                <phrase>75% Power</phrase>
+              </textobject></inlinemediaobject></para></entry>
+	      <entry><para>
+	       The CPU is running at, or close to, 75% throughput</para>
+	      </entry>
+	    </row>
+            <row valign="top">
+              <entry><para><inlinemediaobject><imageobject>
+               <imagedata fileref="figures/cpufreq-50.png"
+	     		  format="PNG"/>
+               </imageobject><textobject>
+                <phrase>50% Power</phrase>
+              </textobject></inlinemediaobject></para></entry>
+	      <entry><para>
+	       The CPU is running at, or close to, 50% throughput
+	      </para></entry>
+	    </row>
+            <row valign="top">
+              <entry><para><inlinemediaobject><imageobject>
+               <imagedata fileref="figures/cpufreq-25.png"
+	     		  format="PNG"/>
+               </imageobject><textobject>
+                <phrase>25% Power</phrase>
+              </textobject></inlinemediaobject></para></entry>
+	      <entry><para>
+	       The CPU is running at, or close to, 25% throughput
+	      </para></entry>
+	    </row>
+	  </tbody>
+	</tgroup>
+      </informaltable>
+   </sect2>
    
    <sect2 id="gnome-cpufreq-selector">
       <title>Frequency Selector</title>
+      <warning><para>The Frequency Selector functionality may not be available
+      on your GNOME Desktop by default. Please consult your system
+      administrator, vendor documentation, or the documentation that came with
+      this software.</para></warning>
       <para>To set the CPU frequency, click on the applet, then a menu will be shown with the list of available frequencies in your system. Now simply choose the frequency you want to set.</para>
       <figure id="cpufreq-applet-selector-img">
 	 <title>&applet; Frequency Selector</title>
@@ -167,7 +238,6 @@
 	    </mediaobject>
 	 </screenshot>
       </figure>
-      <warning><para>If the frequencies menu is not shown, please ask to your system administrator.</para></warning>
    </sect2>
 
 </sect1>
@@ -175,36 +245,30 @@
 <!-- ============= Customization ============================= -->
 <!-- Use this section to describe how to customize the applet. -->
 <sect1 id="cpufreq-applet-prefs"> 
-	 <title>Settings</title> 
-	 <para>To configure <application>&applet;</application>, right-click on the applet, then choose <guimenuitem>Preferences</guimenuitem> from the popup menu.</para> 
+	 <title>Preferences</title> 
+	 <para>To configure the <application>&applet;</application>, right-click on the applet, then choose <guimenuitem>Preferences</guimenuitem> from the popup menu.</para> 
 	 <para>The <guimenuitem>Preferences</guimenuitem> dialog contains the following components: </para> 
 	 <figure id="cpufreq-applet-preferences">
-	    <title>&applet; Preferences Dialog (Single Processor)</title>
+	    <title>&applet; Preferences Dialog</title>
 	    <screenshot>
 	       <mediaobject>
 		  <imageobject><imagedata fileref="figures/cpufreq-applet-preferences.png" format="PNG"/>
 		  </imageobject>
 		  <textobject>
-		     <phrase>&applet; preferences dialog in a single processor system.</phrase>
+		     <phrase>&applet; preferences dialog</phrase>
 		  </textobject>
 	       </mediaobject>
 	    </screenshot>
 	 </figure>
-	 <figure id="cpufreq-applet-preferences-smp">
-	    <title>&applet; Preferences Dialog (Multiprocessor)</title>
-	    <screenshot>
-	       <mediaobject>
-		  <imageobject><imagedata fileref="figures/cpufreq-applet-preferences-smp.png" format="PNG"/>
-		  </imageobject>
-		  <textobject>
-		     <phrase>&applet; preferences dialog in a multiprocessor system (SMP).</phrase>
-		  </textobject>
-	       </mediaobject>
-	    </screenshot>
-	 </figure>
+
+	<note><para>
+	 The <guilabel>Monitored CPU</guilabel> option will only appear on
+	 multiprocessor (SMP) systems.
+	</para></note>
+	 
 	 <variablelist> 
 	   <varlistentry> 
-	      <term><guilabel>Monitored CPU (only in Multiprocessor System)</guilabel></term> 
+	      <term><guilabel>Monitored CPU (only in multiprocessor systems)</guilabel></term> 
 	     <listitem> 
 		<para>Use this drop-down list to select the CPU that you want to monitor.</para>
 	     </listitem>
