@@ -1,3 +1,9 @@
+2005-03-07  Davyd Madeley  <davyd@madeley.id.au>
+
+	* docs/C/figures: Remove old figures, add new ones.
+
+	* docs/C/cpufreq-applet.xml: Update for GNOME 2.10.
+
 2005-02-27  Ryan Lortie  <desrt@desrt.ca>
 
 	* src/cpufreq-applet.c: Don't leak style while handling the
